Fix some styling of nav-items wrt spacing

--- a/stocksearch/src/app/app.component.css
+++ b/stocksearch/src/app/app.component.css
@@ -1,3 +1,10 @@
+li .active {
+    background-color: transparent!important;
+    border: solid 2px white;
+    border-radius: 15px;
+    color: white!important;
+}
+
 body {
     display: flex;
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
@@ -17,13 +24,6 @@ footer {
     width: 100%;
 }
 
-li .active {
-    background-color: transparent!important;
-    border: solid 2px white;
-    border-radius: 15px;
-    color: white;
-}
-
 .navbar {
     background-color: #6E40F4;
 }
@@ -32,18 +32,18 @@ li .active {
     text-align: right;
 }
 
+.nav-item a {
+    color: #A682FF;
+}
+
+.nav-link {
+    color: #A682FF;
+}
+
 @media screen and (max-width: 600px) {
     .nav-item a {
         padding-right: 20px;
     }
-}
-
-.nav-item li a {
-    color: red;
-}
-
-ul li a {
-    color: #A682FF;
 }
 
 ul li a:hover {
